--- a/index.html
+++ b/index.html
@@ -3,10 +3,43 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href ="https://fonts.googleapis.com/css2? family = PT + Sans: wght @ 400; 700 & display = swap "rel =" stylesheet ">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <header class="header">
+      <nav class="header_section">
+        <div class="header-item"><a href="#">главная</a></div>
+        <div class="header-item"><a href="#">фото и видео</a></div>
+    </nav>
+      <div class="header_section">
+        <div class="header-logo">
+          <a href="#">
+            <img src="img/logo.png" alt="Логотип сайта Sedona">
+          </a>
+        </div>
+      </div>
+      <nav class="header_section">
+        <div class="header-item"><a href="#">карта штата</a></div>
+        <div class="header-item"><a href="#">гостиницы</a></div>
+    </nav>
+    </header>
+    <main class="main">
+      <section>
+        <div class="image_inner">
+          <img class="bg" src="img/background photo.png" alt="фоновая картинка горы">
+          <div class="image_shape">
+            <img src="img/group 1.png" alt="" >
+          <div class="image_title">
+            <img src="img/welcome.png" alt="" > 
+            <img src="img/gorgeous.png" alt="" > 
+            <img src="img/sedona.png" alt="" > 
+          </div>
+        </div>  
+      </section>
+    </main>
+  
+   
 
   </body>
 </html>
