--- a/index.html
+++ b/index.html
@@ -24,19 +24,8 @@
         <div class="header-item"><a href="#">гостиницы</a></div>
     </nav>
     </header>
-    <main class="main">
-      <section>
-        <div class="image_inner">
-          <img class="bg" src="img/background photo.png" alt="фоновая картинка горы">
-          <div class="image_shape">
-            <img src="img/group 1.png" alt="" >
-          <div class="image_title">
-            <img src="img/welcome.png" alt="" > 
-            <img src="img/gorgeous.png" alt="" > 
-            <img src="img/sedona.png" alt="" > 
-          </div>
-        </div>  
-      </section>
+    <main>
+      
     </main>
   
    
