--- a/index.html
+++ b/index.html
@@ -1,34 +1,102 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-    <link href ="https://fonts.googleapis.com/css2? family = PT + Sans: wght @ 400; 700 & display = swap "rel =" stylesheet ">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML Academy: Седона</title>
+        <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel ="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
   <body>
     <header class="header">
-      <nav class="header_section">
-        <div class="header-item"><a href="#">главная</a></div>
-        <div class="header-item"><a href="#">фото и видео</a></div>
-    </nav>
-      <div class="header_section">
-        <div class="header-logo">
-          <a href="#">
-            <img src="img/logo.png" alt="Логотип сайта Sedona">
-          </a>
+        <nav class="header_section">
+            <div class="header-item"><a href="#">главная</a></div>
+            <div class="header-item"><a href="#">фото и видео</a></div>
+        </nav>
+        <div class="header_section">
+            <div class="header-logo">
+                <a href="#">
+                    <img src="img/logo.png" alt="Логотип сайта Sedona">
+                </a>
+            </div>
         </div>
-      </div>
-      <nav class="header_section">
-        <div class="header-item"><a href="#">карта штата</a></div>
-        <div class="header-item"><a href="#">гостиницы</a></div>
-    </nav>
+        <nav class="header_section">
+          <div class="header-item"><a href="#">карта штата</a></div>
+          <div class="header-item"><a href="#">гостиницы</a></div>
+      </nav>
     </header>
     <main>
+      <section class="welcome_content" style=background-image:url(img/bg.png)>
+        <div class="welcome_content_title"></div>
+        <div class="welcome"><img  src="img/welcome.png" alt=""></div>
+        <div class="gorgeous"><img  src="img/gorgeous.png" alt=""></div>
+        <div class="sedona"><img  src="img/sedona.png" alt=""></div>
+        <div class="shape"><img  src="img/shape.png" alt=""></div>
+      </section>
+      <section class="content">
+        <p class="content_title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
+        <p class="content_text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </section>
+      <section class="services">
+        <div class="sity">
+          <div class="services_text_1">
+            <h2>Настоящий городок</h2>
+            <p>— №1 —</p>
+            <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+          </div>
+          <p class="img_sity"><img src="img/sity.png" alt=""></p>
+        </div>
+      </section>
+        <section class="services-item">
+          <div class="services_img"><img src="img/home.png" alt=""></div><br>
+              <div class="services_text">
+                  <h2>жилье</h2><br>
+                  <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </div>
+        </section>
+        <section class="services-item">
+          <div class="services_img"><img src="img/food.png" alt=""></div>
+              <div class="services_text">
+                  <h2>еда</h2>
+                  <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </div>
+        </section>
+        <section class="services-item">
+          <div class="services_img"><img src="img/souvenir.png" alt=""></div>
+              <div class="services_text">
+                  <h2>сувениры</h2>
+                  <p></p>
+              </div>
+        </section>
+        <section class="services">
+        <div class="bridge">
+          <p class="img_bridge"><img src="img/bridge.png" alt=""></img>
+        </div>
+        <div class="services_text_2">
+                <h2>Там есть Мост дьявола</h2>
+                <p>— №2 —</p>
+                <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        </div>
+        </section>
+        <div class="services_text">
+            <h2>небольшая площадь</h2>
+            <p>— №3 —</p>
+            <p>все достопримечательности находятся очень близко</p>
+        </div>
+        <div class="services_text">
+          <h2>красивая дорога</h2>
+          <p>— №4 —</p>
+          <p>ехать в седону из лас-вегаса совсем не скучно!</p>
+        </div>
+        <div class="services_text">
+          <h2>мало туристов</h2>
+          <p>— №5 —</p>
+          <p>большинство едет в гранд каньон и толпится там</p>
+        </div>
+        <section class="content">
+          <p>заинтересовались?</p>
+          <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        </section>
       
     </main>
-  
-   
-
   </body>
 </html>
