--- a/index.html
+++ b/index.html
@@ -4,73 +4,70 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
+
   <link rel="stylesheet" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <header class="header">
-    <nav class="header_section">
-      <div class="header_item"><a href="#">информация</a></div>
-      <div class="header_item"><a href="#">фото и видео</a></div>
+  <header class="header_top">
+    <nav class="header_menu">
+      <a class="logo">
+        <img src="img/logo.png" alt="Логотип сайта Sedona" style="height: 60px; width: 138px;">
+      </a>
+      <ul>
+        <li class="header_item"><a href="#">информация</a></li>
+        <li class="header_item"><a href="#">фото и видео</a></li>
+        <li class="header_item"><a href="#">карта штата</a></li>
+        <li class="header_item"><a href="#">гостиницы</a></li>
+      </ul>
     </nav>
-    <a class="logo">
-      <img src="img/logo.png" alt="Логотип сайта Sedona" style="height: 60px; width: 138px;">
-    </a>
-    <nav class="header_section">
-      <div class="header_item"><a href="#">карта штата</a></div>
-      <div class="header_item"><a href="#">гостиницы</a></div>
-    </nav>
+    <h1>sedona</h1>
+    <section class="header_content">
+      <img src="" alt="welcome">
+      <img src="" alt="gorgeous">
+      <img src="" alt="sedona">
+      <img src="" alt="shape">
+    </section>
   </header>
   <main>
-    <h1>sedona</h1>
-    <section class="welcome_content" style=background-image:url(img/bg.png)> <br>
-      <p class="welcome"><img src="img/welcome.png" alt="welcome"></p>
-      <p class="gorgeous"><img src="img/gorgeous.png" alt="gorgeous"></p>
-      <p class="sedona"><img src="img/sedona.png" alt="sedona"></p>
-      <p class="shape"><img src="img/shape.png" alt="shape"></p>
-    </section>
     <section class="content">
-      <p class="content_title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
-      <p class="content_text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <h2>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </section>
     <section class="services">
       <div class="sity">
-        <div class="services_text_first">
-          <h2>Настоящий <br>городок</h2>
-          <p>— №1 —</p>
-          <p>Седона - не аттракцион для туристов, там <br>течёт своя жизнь</p>
-        </div>
-        <p class="img_sity"><img src="img/sity.png" alt="sity" style="width:800px; height:256px"></p>
+        <h2>Настоящий <br>городок</h2>
+        <p>— №1 —</p>
+        <p>Седона - не аттракцион для туристов, там <br>течёт своя жизнь</p>
       </div>
+      <p class="img_sity"><img src="" alt="sity" style="width:800px; height:256px"></p>
     </section>
     <section class="services_item">
-      <article class="services_item_item">
-        <div class="servises_servises">
-          <img src="img/home.png" alt="home" style="width:75px; height:72px">
-          <h2>жилье</h2>
-          <p>Рекомендуем пожить в настоящем <br> мотеле, всё как в кино!</p>
-        </div>
-      </article>
-      <article class="services_item_item">
-        <div class="services_img"><img src="img/food.png" alt="food" style="width:75px; height:72px"></div>
-        <div class="services_text">
-          <h2>еда</h2>
-          <p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
-        </div>
-      </article>
-      <article class="services_item_item">
-        <div class="services_img"><img src="img/souvenir.png" alt="souvenir" style="width:75px; height:72px"></div>
-        <div class="services_text">
-          <h2>сувениры</h2>
-          <p>Не только китайского, но и местного <br>производства!</p>
-        </div>
-      </article>
+      <div class="servises_servises">
+        <img src="" alt="home" style="width:75px; height:72px">
+        <h2>жилье</h2>
+        <p>Рекомендуем пожить в настоящем <br> мотеле, всё как в кино!</p>
+      </div>
+      <div class="services_img"><img src="" alt="food" style="width:75px; height:72px"></div>
+      <div class="services_text">
+        <h2>еда</h2>
+        <p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+      </div>
+      <div class="services_img"><img src="" alt="souvenir" style="width:75px; height:72px"></div>
+      <div class="services_text">
+        <h2>сувениры</h2>
+        <p>Не только китайского, но и местного <br>производства!</p>
+      </div>
     </section>
     <section class="services">
       <div class="bridge">
-        <p class="img_bridge"><img src="img/bridge.png" alt="bridge" style="width:800px; height:256px;"></p>
+        <p class="img_bridge"><img src="" alt="bridge" style="width:800px; height:256px;"></p>
         <div class="services_text_second">
           <h2>Там есть Мост дьявола</h2>
           <p>— №2 —</p>
@@ -97,44 +94,53 @@
     </section>
     <section class="content_item">
       <h2>заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <p>укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
     </section>
     <section class="search">
       <div class="search_hotel">
         <h3>поиск гостиницы в седоне</h3>
       </div>
-      <section class="form" style=background-image:url(img/map.png)> <div class="form_content">
-        <form action="#" method="POST">
-          <p><label>дата заезда</label><input type="text" value="24 апреля 2017" style="width:346px; height:38px;"></p>
-          <br>
-          <p><label>дата выезда</label><input type="text" value="4 июля 2017" style="width:346px; height:38px;"></p><br>
-          <div class="label">
-            <p class="adult"><label>взрослые:</label><input type="text" name="arrive" style="width:114px; height:38px;">
-            </p>
-            <p class="child"><label>дети:</label><input type="text" name="arrive" style="width:114px; height:38px;">
-            </p><br>
-          </div>
-          <input class="button" type="submit" value="найти">
+      <section class="form">
+        <label for="">
+          Дата заезда:
+          <input type="text" id="date-in" name="date-in">
+        </label>
+        <label for="">
+          Дата выезда:
+          <input type="text" id="date-out" name="date-out">
+        </label>
+        <label for="">
+          Взрослые:
+          <button type="button" name="minus"></button>
+          <input type="text" id="adults" name="adults">
+          <button type="button" name="plus"></button>
+        </label>
+        <label for="">
+          Дети:
+          <button type="button" name="minus"></button>
+          <input type="text" id="children" name="children">
+          <button type="button" name="plus"></button>
+        </label>
+        <button type="submit" name="seacrh" class="btn-search">Найти</button>
         </form>
-        </div>
       </section>
     </section>
   </main>
   <footer class="footer">
     <nav class="footer_section">
       <div class="phone">
-        <p>#visitsedona</p>
+        <p><a>#visitsedona</a></p>
         <a class="phone_item" href="+7(495)666-01-66">+7(495)666-01-66</a>
       </div>
       <div class="footer_img">
         <a href="https://twitter.com">
-          <img class="footer_img_item" src="img/twitter.png" alt="твиттер" style="width:17px; height:17px;">
+          <img class="footer_img_item" src="" alt="твиттер" style="width:17px; height:17px;">
         </a>
-        <a href="https://facebook.com"><img class="footer_img_item" src="img/facebook.png" alt="фейсбук"
-            style="width:17px; height:17px;">
+        <a href="https://facebook.com">
+          <img class="footer_img_item" src="" alt="фейсбук" style="width:17px; height:17px;">
         </a>
-        <a href="https://youtube.com"><img class="footer_img_item" src="img/youtube.png" alt="ютуб"
-            style="width:17px; height:17px;">
+        <a href="https://youtube.com">
+          <img class="footer_img_item" src="" alt="ютуб" style="width:17px; height:17px;">
         </a>
       </div>
       <div class="footer_from">
