--- a/index.html
+++ b/index.html
@@ -1,146 +1,175 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="page-body">
   <header class="header">
-    <nav class="header_section">
-      <div class="header_item"><a href="#">информация</a></div>
-      <div class="header_item"><a href="#">фото и видео</a></div>
+    <nav class="page-menu">
+      <ul class="header-menu">
+        <li class="header-item"><a href="#">информация</a></li>
+        <li class="header-item"><a href="#">фото и видео</a></li>
+      </ul>
     </nav>
     <a class="logo">
-      <img src="img/logo.png" alt="Логотип сайта Sedona" style="height: 60px; width: 138px;">
+      <img src="img/logo.png" alt="Логотип сайта Sedona" style="height: 70px; width: 138px;">
     </a>
-    <nav class="header_section">
-      <div class="header_item"><a href="#">карта штата</a></div>
-      <div class="header_item"><a href="#">гостиницы</a></div>
+    <nav class="page-menu">
+      <ul class="header-menu">
+        <li class="header-item"><a href="#">Карта штата</a></li>
+        <li class="header-item"><a href="/catalog.html">Гостиницы</a></li>
+      </ul>
     </nav>
   </header>
+
   <main>
-    <h1>sedona</h1>
-    <section class="welcome_content" style=background-image:url(img/bg.png)> <br>
+    <h1>Sedona</h1>
+    <section class="welcome-content" style=background-image:url(img/bg.png)> <br>
       <p class="welcome"><img src="img/welcome.png" alt="welcome"></p>
       <p class="gorgeous"><img src="img/gorgeous.png" alt="gorgeous"></p>
       <p class="sedona"><img src="img/sedona.png" alt="sedona"></p>
       <p class="shape"><img src="img/shape.png" alt="shape"></p>
     </section>
+
     <section class="content">
-      <p class="content_title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
-      <p class="content_text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <p class="content-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
+      <p class="content-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </section>
     <section class="services">
       <div class="sity">
-        <div class="services_text_first">
+        <div class="services-text-first">
           <h2>Настоящий <br>городок</h2>
           <p>— №1 —</p>
           <p>Седона - не аттракцион для туристов, там <br>течёт своя жизнь</p>
         </div>
-        <p class="img_sity"><img src="img/sity.png" alt="sity" style="width:800px; height:256px"></p>
+        <p class="img-sity"><img src="img/sity.png" alt="sity" style="width:800px; height:256px"></p>
       </div>
     </section>
-    <section class="services_item">
-      <article class="services_item_item">
-        <div class="servises_servises">
+    <section class="services-items">
+      <article class="services-item">
+        <div class="servises-servises">
           <img src="img/home.png" alt="home" style="width:75px; height:72px">
-          <h2>жилье</h2>
+          <h2>Жилье</h2>
           <p>Рекомендуем пожить в настоящем <br> мотеле, всё как в кино!</p>
         </div>
       </article>
-      <article class="services_item_item">
-        <div class="services_img"><img src="img/food.png" alt="food" style="width:75px; height:72px"></div>
-        <div class="services_text">
-          <h2>еда</h2>
+      <article class="services-item">
+        <div class="services-img"><img src="img/food.png" alt="food" style="width:75px; height:72px"></div>
+        <div class="services-text">
+          <h2>Еда</h2>
           <p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
         </div>
       </article>
-      <article class="services_item_item">
-        <div class="services_img"><img src="img/souvenir.png" alt="souvenir" style="width:75px; height:72px"></div>
-        <div class="services_text">
-          <h2>сувениры</h2>
+      <article class="services-item">
+        <div class="services-img"><img src="img/souvenir.png" alt="souvenir" style="width:75px; height:72px"></div>
+        <div class="services-text">
+          <h2>Сувениры</h2>
           <p>Не только китайского, но и местного <br>производства!</p>
         </div>
       </article>
     </section>
     <section class="services">
       <div class="bridge">
-        <p class="img_bridge"><img src="img/bridge.png" alt="bridge" style="width:800px; height:256px;"></p>
-        <div class="services_text_second">
+        <p class="img-bridge"><img src="img/bridge.png" alt="bridge" style="width:800px; height:256px;"></p>
+        <div class="services-text-second">
           <h2>Там есть Мост дьявола</h2>
           <p>— №2 —</p>
           <p>Да, по нему можно пройти! Если конечно <br>вы осмелитесь</p>
         </div>
       </div>
     </section>
-    <section class="services_text_item">
+    <section class="services-text-item">
       <div class="text>">
         <h2>небольшая <br> площадь</h2>
         <p>— №3 —</p>
-        <p>все достопримечательности <br> находятся очень близко</p>
+        <p>Все достопримечательности <br> находятся очень близко</p>
       </div>
       <div class="text">
-        <h2>красивая <br> дорога</h2>
+        <h2>Красивая <br> дорога</h2>
         <p>— №4 —</p>
-        <p>ехать в седону из лас-вегаса совсем <br>не скучно!</p>
+        <p>Ехать в седону из лас-вегаса совсем <br>не скучно!</p>
       </div>
       <div class="text">
-        <h2>мало <br> туристов</h2>
+        <h2>Мало <br> туристов</h2>
         <p>— №5 —</p>
-        <p>большинство едет в гранд каньон <br>и толпится там</p>
+        <p>Большинство едет в гранд каньон <br>и толпится там</p>
       </div>
     </section>
-    <section class="content_item">
-      <h2>заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    <section class="content-item">
+      <h2>Заинтересовались?</h2>
+      <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
     </section>
     <section class="search">
-      <div class="search_hotel">
-        <h3>поиск гостиницы в седоне</h3>
+      <div class="search-hotel">
+        <h3>Поиск гостиницы в седоне</h3>
       </div>
-      <section class="form" style=background-image:url(img/map.png)> <div class="form_content">
-        <form action="#" method="POST">
-          <p><label>дата заезда</label><input type="text" value="24 апреля 2017" style="width:346px; height:38px;"></p>
-          <br>
-          <p><label>дата выезда</label><input type="text" value="4 июля 2017" style="width:346px; height:38px;"></p><br>
-          <div class="label">
-            <p class="adult"><label>взрослые:</label><input type="text" name="arrive" style="width:114px; height:38px;">
+
+      <section class="form-modal" style="background-image:url(img/map.png)">
+        <div class="modal-content">
+          <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
+            <p class="modal-in">
+              <label for="date-in">Дата заезда:</label>
+              <input id="date-in" type="date" name="data" value="2017-04-24">
             </p>
-            <p class="child"><label>дети:</label><input type="text" name="arrive" style="width:114px; height:38px;">
-            </p><br>
-          </div>
-          <input class="button" type="submit" value="найти">
-        </form>
+            <br>
+            <p class="modal-out">
+              <label for="date-out">Дата выезда:</label>
+              <input id="date-out" type="date" value="2017-07-04">
+            </p>
+            <br>
+            <div class="modal-client">
+              <label for="adults">Взрослые:</label>
+              <p>
+                <input type="submit" value="-">
+                <input id="adults" type="number" name="adult" value="2">
+                <input type="submit" value="+">
+              </p>
+              <label for="сhild">Дети:</label>
+              <p>
+                <input type="submit" value="-">
+                <input id="child" type="number" name="children" value="0">
+                <input type="submit" value="+">
+              </p>
+            </div>
+            <p>
+              <button class="modal-btn" type="submit">Найти</button>
+            </p>
+          </form>
         </div>
       </section>
     </section>
   </main>
-  <footer class="footer">
-    <nav class="footer_section">
+  <footer class="footer-main">
+    <nav class="footer-section">
       <div class="phone">
         <p>#visitsedona</p>
-        <a class="phone_item" href="+7(495)666-01-66">+7(495)666-01-66</a>
+        <a class="phone-item" href="tel:+7(495)666-01-66">+7(495)666-01-66</a>
       </div>
-      <div class="footer_img">
+      <div class="footer-img">
         <a href="https://twitter.com">
-          <img class="footer_img_item" src="img/twitter.png" alt="твиттер" style="width:17px; height:17px;">
+          <img class="footer-img-item" src="img/twitter.png" alt="твиттер" style="width:17px; height:17px;">
         </a>
-        <a href="https://facebook.com"><img class="footer_img_item" src="img/facebook.png" alt="фейсбук"
+        <a href="https://facebook.com"><img class="footer-img-item" src="img/facebook.png" alt="фейсбук"
             style="width:17px; height:17px;">
         </a>
-        <a href="https://youtube.com"><img class="footer_img_item" src="img/youtube.png" alt="ютуб"
+        <a href="https://youtube.com"><img class="footer-img-item" src="img/youtube.png" alt="ютуб"
             style="width:17px; height:17px;">
         </a>
       </div>
-      <div class="footer_from">
+      <article class="footer-from">
         <p>Website by</p>
         <img src="img/htmlacademy.png" alt="" style="width:115px; height: 41px;">
-      </div>
+      </article>
     </nav>
 
   </footer>
