--- a/catalog.html
+++ b/catalog.html
@@ -121,8 +121,8 @@
               <p class="hotel-value">От 4000 р.</p>
             </div>
             <p class="hotel-button">
-              <button type="submit" class="hotel-first">Подробнее</button>
-              <button type="submit" class="hotel-second">Забронировать</a>
+              <a class="hotel-first" href="#">Подробнее</a>
+              <a class="hotel-second" href="#">Забронировать</a>
             </p>
           </div>
           <div class="hotel-rating">
