--- a/catalog.html
+++ b/catalog.html
@@ -155,7 +155,7 @@
         </li>
         <li class="hotel-item">
           <div class="hotel-photo">
-            <img class="hotel-photo-item" src="img/villas.png" alt="Фотография гостиницы">
+            <img class="hotel-photo-item" src="img/villas.jpg" alt="Фотография гостиницы">
           </div>
           <div class="hotel-info">
             <h2 class="hotel-name">Villas at poco diablo</h2>
