--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
         <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
           <p class="modal-in">
             <label for="date-in">Дата заезда:</label>
-            <input id="date-in" type="date" name="date" value="2017-24-04">
+            <input id="date-in" type="text" name="date" value="2017-24-04">
           </p>
           <br>
           <p class="modal-out">
             <label for="date-out">Дата выезда:</label>
-            <input id="date-out" type="date" name="date" value="2017-07-04">
+            <input id="date-out" type="text" name="date" value="2017-07-04">
           </p>
           <br>
           <div class="modal-client">
